Fixing width issue on mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -195,6 +195,7 @@ pre.language-cpp
 
 .page_Content
 {
+	width: 100%;
 	border-radius: 0px 0px 5px 5px;
 	padding: 0px 16px 16px 16px;
 	background-color: rgba(255, 255, 255, 0.5);
